--- a/Challenges.html
+++ b/Challenges.html
@@ -19,8 +19,8 @@
   <body class="lesson">
     <div class="container card">
       <div class="banner">
-        <a href="http://software-carpentry.org" title="Software Carpentry">
-          <img alt="Software Carpentry banner" src="img/software-carpentry-banner.png" />
+        <a href="http://www.ecs.soton.ac.uk" title="Electronics and Computer Science">
+          <img alt="ECS banner" src="img/ecs-logo.png" />
         </a>
       </div>
       <article>
