--- a/motivation.html
+++ b/motivation.html
@@ -23,7 +23,7 @@
 
     <div class="slide title-slide" data-container-class="no-status">
         <h1 class="var-title"></h1>
-        <img class="logo" src="img/software-carpentry-banner.png" alt="Software Carpentry"/>
+        <img class="logo" src="img/ecs-logo.png" alt="ECS"/>
     </div>
 
     <!-- Begin slides. Just make elements with a class of slide. -->
