Simplify access to Python from command line

--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -41,8 +41,8 @@
 <h2 id="starting-the-python-interpreter">Starting the Python Interpreter</h2>
 <ul>
 <li>The interpreter provides an interactive environment to play with the language</li>
-<li>Mac/Linux: Open a terminal window and type <strong>python2.7</strong></li>
-<li>Windows: Open a command prompt and type <strong>python2.7</strong></li>
+<li>Mac/Linux: Open a terminal window and type <strong>python</strong></li>
+<li>Windows: Open a command prompt and type <strong>python</strong></li>
 <li>At the prompt type <strong>print ‘hello world!’</strong> <img src="img/hello.png" /></li>
 </ul>
 <h2 id="control-flow-repeating-actions-with-loops">Control Flow: Repeating actions with loops</h2>
