--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </ul>
 <h2 id="other-resources">Other resources</h2>
 <ul>
+<li><a href="supplementary-slides.html">Supplementary slides</a></li>
 <li><a href="10-Python-style-guide.html">Python Style Guide</a></li>
 <li><a href="motivation.html">Slides</a></li>
 <li><a href="Challenges.html">Exercises</a></li>
