Try download instructions on single slide

--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -30,15 +30,10 @@
 <section id="download-some-materials" class="slide level2">
 <h1>Download some materials</h1>
 <ul>
-<li>Use a browser to go the following URL and download the materials to your machine: http://users.ecs.soton.ac.uk/stc/COMP3207-materials.zip</li>
+<li>Use a browser to go the following URL and download the materials to your machine: <strong>http://users.ecs.soton.ac.uk/stc/COMP3207-materials.zip</strong></li>
 <li>Copy the file to your home directory (or C: if on a Windows machine)</li>
-</ul>
-</section>
-<section id="extract-the-materials" class="slide level2">
-<h1>Extract the materials</h1>
-<ul>
-<li>Mac OS X or Linux: type in the following in a shell prompt: cd <path to your home directory> unzip COMP3207-materials.zip cd code</li>
-<li>Windows: double click on the zip file to extract it, then run a command prompt and type: cd <path to your home directory> cd code</li>
+<li>Mac OS X or Linux: type in the following in a shell prompt: <strong>cd /home/user</strong> (or wherever your home directory is) <strong>unzip COMP3207-materials.zip</strong> <strong>cd code</strong></li>
+<li>Windows: double click on the zip file to extract it, then run a command prompt and type: <strong>cd C:* (or wherever your home directory is) </strong>cd code**</li>
 </ul>
 </section>
 <section id="starting-the-python-interpreter" class="slide level2">
