--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -32,8 +32,22 @@
 <ul>
 <li>Use a browser to go the following URL and download the materials to your machine: <strong>http://users.ecs.soton.ac.uk/stc/COMP3207-materials.zip</strong></li>
 <li>Copy the file to your home directory (or C: if on a Windows machine)</li>
-<li>Mac OS X or Linux: type in the following in a shell prompt: <strong>cd /home/user</strong> (or wherever your home directory is) <strong>unzip COMP3207-materials.zip</strong> <strong>cd code</strong></li>
-<li>Windows: double click on the zip file to extract it, then run a command prompt and type: <strong>cd C:* (or wherever your home directory is) </strong>cd code**</li>
+</ul>
+</section>
+<section id="extract-the-materials" class="slide level2">
+<h1>Extract the materials</h1>
+<ul>
+<li>Mac OS X or Linux: type in the following in a shell prompt:
+<ul>
+<li><strong>cd /home/user</strong> (your home directory)</li>
+<li><strong>unzip COMP3207-materials.zip</strong></li>
+<li><strong>cd code</strong></li>
+</ul></li>
+<li>Windows: double click on the zip file to extract it, then run a command prompt and type:
+<ul>
+<li><strong>cd C:\Users\username</strong> (your home directory)</li>
+<li><strong>cd code</strong></li>
+</ul></li>
 </ul>
 </section>
 <section id="starting-the-python-interpreter" class="slide level2">
