Fix Windows extract instructions

--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -31,7 +31,11 @@
 <h1>Download some materials</h1>
 <ul>
 <li>Use a browser to go the following URL and download the materials to your machine: <strong>http://users.ecs.soton.ac.uk/stc/COMP3207-materials.zip</strong></li>
-<li>Copy the file to your home directory (or C: if on a Windows machine)</li>
+<li>Copy the file to your home directory
+<ul>
+<li>Mac OS X, Linux: e.g. /home/user</li>
+<li>Windows: e.g. C:\Users\user</li>
+</ul></li>
 </ul>
 </section>
 <section id="extract-the-materials" class="slide level2">
@@ -43,7 +47,7 @@
 <li><strong>unzip COMP3207-materials.zip</strong></li>
 <li><strong>cd code</strong></li>
 </ul></li>
-<li>Windows: double click on the zip file to extract it, then run a command prompt and type:
+<li>Windows: right click on the zip file, ‘Extract All…’, enter your home directory, then run a command prompt and type:
 <ul>
 <li><strong>cd C:\Users\username</strong> (your home directory)</li>
 <li><strong>cd code</strong></li>
