--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -30,7 +30,7 @@
 <section id="download-some-materials" class="slide level2">
 <h1>Download some materials</h1>
 <ul>
-<li>Use a browser to go the following URL and download the materials to your machine: <strong>http://users.ecs.soton.ac.uk/stc/COMP3207-materials.zip</strong></li>
+<li>Use a browser to go the following URL and download the materials to your machine: <strong>http://bit.ly/2eia34u</strong></li>
 <li>Copy the file to your home directory
 <ul>
 <li>Mac OS X, Linux: e.g. /home/user</li>
