Remove print statement

--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -60,7 +60,7 @@
 <li>The interpreter provides an interactive environment to play with the language</li>
 <li>Mac/Linux: Open a terminal window and type <strong>python</strong></li>
 <li>Windows: Open a command prompt and type <strong>python</strong></li>
-<li>At the prompt type <strong>print ‘hello world!’</strong> <img src="img/hello.png" /></li>
+<li>At the prompt type <strong>‘hello world!’</strong> <img src="img/hello.png" /></li>
 </ul>
 </section>
 <section id="control-flow-repeating-actions-with-loops" class="slide level2">
