Add in Google Doc status checker link

--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -27,6 +27,17 @@
     </div>
 
     <!-- Begin slides. Just make elements with a class of slide. -->
+<section id="live-coding-status-checker" class="slide level2">
+<h1>Live coding status checker</h1>
+<ul>
+<li>Gives me an idea of how much time you need!</li>
+<li>When we start a task, enter your name into
+<ul>
+<li><strong>http://bit.ly/2dx48W6</strong></li>
+</ul></li>
+<li>When you’ve finished the task, just remove it</li>
+</ul>
+</section>
 <section id="download-some-materials" class="slide level2">
 <h1>Download some materials</h1>
 <ul>
