What we'll cover

--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -65,6 +65,18 @@
 </ul></li>
 </ul>
 </section>
+<section id="what-well-cover" class="slide level2">
+<h1>What we’ll cover</h1>
+<ul>
+<li>Starting the interpreter</li>
+<li>Variables</li>
+<li>Lists</li>
+<li>Loops</li>
+<li>Processing data files</li>
+<li>Making choices</li>
+<li>Creating functions</li>
+</ul>
+</section>
 <section id="starting-the-python-interpreter" class="slide level2">
 <h1>Starting the Python Interpreter</h1>
 <ul>
