Ensure material focused on Python 2.7

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <li><a href="Challenges.html">Exercises</a></li>
 <li><a href="../../reference.html">A quick Python language reference</a></li>
 </ul>
+<p><strong>NB:</strong> This material is based on Python 2.7</p>
         </div>
       </div>
       </article>
