Update to Python 3

--- a/10-Python-style-guide.html
+++ b/10-Python-style-guide.html
@@ -49,11 +49,11 @@
 <li>Put comments on lines of their own, rather than to the right of code</li>
 </ul>
 <p>Here are some basic python style rules listed in a table below:</p>
-<table style="width:58%;">
+<table>
 <colgroup>
-<col width="20%" />
-<col width="19%" />
-<col width="18%" />
+<col style="width: 35%" />
+<col style="width: 33%" />
+<col style="width: 30%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -126,7 +126,7 @@
 </tbody>
 </table>
 <p align="center">
-<pre><code> &lt;strong&gt;Table 8.1: Basic Python Style Rules &lt;/strong&gt;                                                </code></pre>
+<strong>Table 8.1: Basic Python Style Rules </strong>
 </p>
         </div>
       </div>
