--- a/discussion.html
+++ b/discussion.html
@@ -29,7 +29,7 @@
                     <a href="index.html"><h1 class="title">Programming with Python</h1></a>
           <h2 class="subtitle">Discussion</h2>
           <h2 id="rules-of-debugging">Rules of Debugging</h2>
-<ol style="list-style-type: decimal">
+<ol type="1">
 <li>Fail early, fail often.</li>
 <li>Always initialize from data.</li>
 <li>Know what it’s supposed to do.</li>
