--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
                     <h1 class="title">COMP3207 - Introduction to Python - A Basic Tutorial</h1>
-          <h2 id="topics">Topics</h2>
+          <h2 id="prerequisites">Prerequisites</h2>
+<p>Ensure you have installed Python 3 as in the <a href="prerequisites.html">prerequisites</a>. These teaching materials are optimised for Linux and Mac, but should also work on Windows (taking into account the differences, in particular, with the command line).</p>
+<p>Download the tutorial materials by going to <a href="https://github.com/steve-crouch/COMP3207-python-basics" class="uri">https://github.com/steve-crouch/COMP3207-python-basics</a> and selecting <code>Code</code> and <code>Download ZIP</code>. Unpack the contents to a directory within your home directory. Using a terminal or command prompt, change directory to the <code>COMP3207-python-basics-gh-pages/code</code> directory. This will be our working directory for the material.</p>
+<h2 id="topics">Topics</h2>
 <ul>
 <li><a href="01-basic.html">Python basics: Running the Python interpreter and Variables</a></li>
 <li><a href="02-lists.html">Arrays and Lists</a></li>
@@ -35,7 +38,6 @@
 <li><a href="04-files.html">Processing data files</a></li>
 <li><a href="05-cond.html">Making choices</a></li>
 <li><a href="06-functions.html">Creating functions</a></li>
-<li><a href="07-cmdline.html">Command-Line Programs</a></li>
 </ul>
 <h2 id="other-resources">Other resources</h2>
 <ul>
@@ -44,7 +46,7 @@
 <li><a href="Challenges.html">Exercises</a></li>
 <li><a href="../../reference.html">A quick Python language reference</a></li>
 </ul>
-<p><strong>NB:</strong> This material is based on Python 2.7</p>
+<p><strong>NB:</strong> This material is based on Python 3</p>
         </div>
       </div>
       </article>
