--- a/supplementary-slides.html
+++ b/supplementary-slides.html
@@ -28,7 +28,7 @@
 
     <!-- Begin slides. Just make elements with a class of slide. -->
 <section id="live-coding-status-checker" class="slide level2">
-<h1>Live coding status checker</h1>
+<h2>Live coding status checker</h2>
 <ul>
 <li>Gives me an idea of how much time you need!</li>
 <li>When we start a task, enter your name into
@@ -39,7 +39,7 @@
 </ul>
 </section>
 <section id="download-some-materials" class="slide level2">
-<h1>Download some materials</h1>
+<h2>Download some materials</h2>
 <ul>
 <li>Use a browser to go the following URL and download the materials to your machine: <strong>http://bit.ly/2eia34u</strong></li>
 <li>Copy the file to your home directory
@@ -50,7 +50,7 @@
 </ul>
 </section>
 <section id="extract-the-materials" class="slide level2">
-<h1>Extract the materials</h1>
+<h2>Extract the materials</h2>
 <ul>
 <li>Mac OS X or Linux: type in the following in a shell prompt:
 <ul>
@@ -66,7 +66,7 @@
 </ul>
 </section>
 <section id="what-well-cover" class="slide level2">
-<h1>What we’ll cover</h1>
+<h2>What we’ll cover</h2>
 <ul>
 <li>Starting the interpreter</li>
 <li>Variables</li>
@@ -78,16 +78,16 @@
 </ul>
 </section>
 <section id="starting-the-python-interpreter" class="slide level2">
-<h1>Starting the Python Interpreter</h1>
+<h2>Starting the Python Interpreter</h2>
 <ul>
 <li>The interpreter provides an interactive environment to play with the language</li>
 <li>Mac/Linux: Open a terminal window and type <strong>python</strong></li>
 <li>Windows: Open a command prompt and type <strong>python</strong></li>
-<li>At the prompt type <strong>‘hello world!’</strong> <img src="img/hello.png" /></li>
+<li>At the prompt type <strong>‘hello world!’</strong> <img data-src="img/hello.png" /></li>
 </ul>
 </section>
 <section id="control-flow-repeating-actions-with-loops" class="slide level2">
-<h1>Control Flow: Repeating actions with loops</h1>
+<h2>Control Flow: Repeating actions with loops</h2>
 <ul>
 <li>What a loop does?</li>
 <li>Writing loops to repeat simple calculations
@@ -99,19 +99,17 @@
 </ul>
 </section>
 <section id="why-indentation" class="slide level2">
-<h1>Why indentation?</h1>
+<h2>Why indentation?</h2>
 <ul>
-<li>Studies show that’s what people actually pay attention to
-<ul>
-<li>Every textbook on C or Java has examples where indentation and bracing don’t match</li>
-</ul></li>
-<li>Doesn’t matter how much indentation you use, but the whole block must be consistent<br /></li>
+<li>Studies show that’s what people actually pay attention to + Every textbook on C or Java has examples where indentation and bracing don’t match</li>
+<li>Doesn’t matter how much indentation you use, but the whole block must be consistent<br />
+</li>
 <li>Python Style Guide (PEP 8) recommends 4 spaces</li>
 <li>And no tab characters</li>
 </ul>
 </section>
 <section id="lists-in-python" class="slide level2">
-<h1>Lists in Python</h1>
+<h2>Lists in Python</h2>
 <ul>
 <li>Lists as arrays</li>
 <li>Indexing
@@ -127,31 +125,23 @@
 </ul>
 </section>
 <section id="indexing-and-slicing-a-list-example" class="slide level2">
-<h1>Indexing and Slicing a List Example</h1>
-<figure>
-<img src="img/index_list_odd.png" />
-</figure>
+<h2>Indexing and Slicing a List Example</h2>
+<p><img data-src="img/index_list_odd.png" /></p>
 </section>
 <section id="indexing-and-slicing-a-list-example-1" class="slide level2">
-<h1>Indexing and Slicing a List Example</h1>
-<figure>
-<img src="img/index_list_odd2.png" />
-</figure>
+<h2>Indexing and Slicing a List Example</h2>
+<p><img data-src="img/index_list_odd2.png" /></p>
 </section>
 <section id="indexing-and-slicing-a-list-example-2" class="slide level2">
-<h1>Indexing and Slicing a List Example</h1>
-<figure>
-<img src="img/slice_list_odd.png" />
-</figure>
+<h2>Indexing and Slicing a List Example</h2>
+<p><img data-src="img/slice_list_odd.png" /></p>
 </section>
 <section id="indexing-and-slicing-a-list-example-3" class="slide level2">
-<h1>Indexing and Slicing a List Example</h1>
-<figure>
-<img src="img/slice_list_string.png" />
-</figure>
+<h2>Indexing and Slicing a List Example</h2>
+<p><img data-src="img/slice_list_string.png" /></p>
 </section>
 <section id="using-python-libraries" class="slide level2">
-<h1>Using Python libraries</h1>
+<h2>Using Python libraries</h2>
 <ul>
 <li>This introduction to Python is built around an end to end scientific example: data analysis</li>
 <li>What is a library (module) and its usage</li>
@@ -159,23 +149,21 @@
 </ul>
 </section>
 <section id="numpy-arrays" class="slide level2">
-<h1>NumPy Arrays</h1>
+<h2>NumPy Arrays</h2>
 <ul>
-<li>NumPy arrays and operations on arrays of data</li>
+<li><p>NumPy arrays and operations on arrays of data</p>
+<p><img data-src="img/numpy_array_dims.png" /></p></li>
 </ul>
-<figure>
-<img src="img/numpy_array_dims.png" />
-</figure>
 </section>
 <section id="numpy-arrays-indexing-and-slicing" class="slide level2">
-<h1>NumPy arrays: Indexing and Slicing</h1>
+<h2>NumPy arrays: Indexing and Slicing</h2>
 <ul>
 <li>Ways of selecting individual values and subsets of data</li>
 <li>One-dimensional arrays are simple; on the surface they act similarly to Python lists.</li>
 </ul>
 </section>
 <section id="indexing-in-a-numpy-2d-array" class="slide level2">
-<h1>Indexing in a NumPy 2D array</h1>
+<h2>Indexing in a NumPy 2D array</h2>
 <ul>
 <li>The indices are (row, column) instead of (column, row).</li>
 <li>Example Patient inflammation data who were given treatment for arthritis:
@@ -186,13 +174,11 @@
 </ul>
 </section>
 <section id="cont.." class="slide level2">
-<h1>Cont..</h1>
-<figure>
-<img src="img/indexing2darray.png" />
-</figure>
+<h2>Cont..</h2>
+<p><img data-src="img/indexing2darray.png" /></p>
 </section>
 <section id="data-visualisation-using-libraries" class="slide level2">
-<h1>Data visualisation using libraries</h1>
+<h2>Data visualisation using libraries</h2>
 <p><em>The purpose of computing is insight, not numbers, Richard Hamming.</em></p>
 <ul>
 <li>Best way to develop insight is often to visualise data.</li>
@@ -200,7 +186,7 @@
 </ul>
 </section>
 <section id="control-flow-making-choices" class="slide level2">
-<h1>Control Flow: Making choices</h1>
+<h2>Control Flow: Making choices</h2>
 <ul>
 <li>Write conditional statements including <code>if</code>, <code>elif</code> and <code>else</code></li>
 <li>A few things to note about the syntax:
@@ -213,7 +199,7 @@
 </ul>
 </section>
 <section id="creating-functions" class="slide level2">
-<h1>Creating Functions</h1>
+<h2>Creating Functions</h2>
 <ul>
 <li>Defining a function, the parameters that it takes, return value</li>
 <li>Test and debug a function</li>
@@ -223,7 +209,7 @@
 </ul>
 </section>
 <section id="command-line-programs" class="slide level2">
-<h1>Command-line Programs</h1>
+<h2>Command-line Programs</h2>
 <ul>
 <li>Using values of command-line arguments in a program</li>
 <li>Handling flags and files separately in a command-line program</li>
@@ -231,7 +217,7 @@
 </ul>
 </section>
 <section id="wrap-up-challenge-connecting-the-dots" class="slide level2">
-<h1>Wrap-up Challenge: Connecting the dots</h1>
+<h2>Wrap-up Challenge: Connecting the dots</h2>
 <p><strong>Write a python script (function) for Fahrenheit to Celsius temperature conversion and stores the output in a file.</strong></p>
 <ul>
 <li>Hint (Tools to be used):
@@ -244,7 +230,7 @@
 </ul>
 </section>
 <section id="thank-you" class="slide level2">
-<h1>Thank You!</h1>
+<h2>Thank You!</h2>
 </section>
     <!-- End slides. -->
 
