--- a/prerequisites.html
+++ b/prerequisites.html
@@ -43,9 +43,9 @@ You can verify you have nano installed by opening a terminal and entering:
 <p>If nano is not installed, you will receive an error. If it is installed, nano will open (appearing not dissimilar to the terminal window, but with menu items at the bottom of the window).</p>
 <p>To exit nano press CTRL+X (you might be prompted you to save or discard modified buffer - just type “N” to exit without saving).</p>
 <h2 id="python">Python</h2>
-<p>We use Python 2.7 for this introduction, as it’s required to use the Google App Engine.</p>
-<p>The “Python Anaconda” installation provides everything Python-related you will need for the workshop. To install Anaconda, go to the link below and install version 2.7 (not 3.5!) - scroll down the page a bit for the link:</p>
-<p>https://www.continuum.io/downloads</p>
+<p>These materials assume use of Python 3.7 or Python 3.8, as Google App Engine supports these.</p>
+<p>The “Python Anaconda” installation provides everything Python-related you will need for the workshop. To install Anaconda, go to the link below and install version 3.8 - scroll down the page to the bottom for the link:</p>
+<p>https://www.anaconda.com/products/individual</p>
         </div>
       </div>
       </article>
